[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/font_timer.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/game_ui.gd" type="Script" id=2]
[ext_resource path="res://fonts/itim-regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "start"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextStart:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 0.5, 0, 2, 1 ),
"update": 0,
"values": [ Vector2( -432, 122 ), Vector2( 168, 122 ), Vector2( 168, 122 ), Vector2( 792, 122 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextStart:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 0.5, 0, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 0.3 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 0.3 ) ]
}

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextTimer" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = -8.0
margin_right = 64.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )
text = "120"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextStart" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -752.0
margin_top = -58.0
margin_right = -446.998
margin_bottom = 58.0
rect_scale = Vector2( 1, 0.3 )
custom_fonts/font = SubResource( 1 )
text = "START!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
